# Neuron

./: .gitignore  README.md  demo.ipynb
.github/workflows/: rust.yml
neuron/: Cargo.toml
neuron/src/: core.rs  layer.rs  lib.rs  mlp.rs  neuron.rs  nn.rs  val.rs
