[package]
name = "neuron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0"
graphviz-rust = "0"
petgraph = "0"
petgraph-evcxr = {version = "0", optional = true}
rand = "0"

[features]
notebook = ["dep:petgraph-evcxr"]